# cookiecutter-rust-bin

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json
.github/workflows/: main.yml
hooks/: post_gen_project.sh
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
{{cookiecutter.project_slug}}/src/: error.rs  main.rs
{{cookiecutter.project_slug}}/tests/: test_docs.rs
